IMP standar format on manifest files and minor improovements

--- a/AUTHORS
+++ b/AUTHORS
@@ -38,5 +38,6 @@ Luis Falcon (www.thymbra.com) <lfalcon@thymbra.com>
 Cristian S. Rocha (business.moldeo.coop) <cristian.rocha@moldeo.coop>
 Bruno M. Villasanti (www.thymbra.com) <bvillasanti@thymbra.com>
 López Ignacio M. (www.dinamotion.com.ar) <lopezignacio@gmail.com>
+Juan José Scarafía <jjs@adhoc.com.ar>
 
 # vim:expandtab:smartindent:tabstop=4:softtabstop=4:shiftwidth=4:
